--- a/AnApp/app.json
+++ b/AnApp/app.json
@@ -27,7 +27,13 @@
       "name": "BingMaps.AppSource",
             "publisher": "Freddy Kristiansen",
                   "version": "1.0.0.0"
-  }
+  },
+   {
+      "id": "3ac109ac-e684-4688-be0f-faf8d5c99238",
+      "name": "AnotherApp",
+      "publisher": "Freddy Kristiansen",
+      "version": "1.0.0.0"
+    }
   ],
   "screenshots": [],
   "platform": "1.0.0.0",
